--- a/package.json
+++ b/package.json
@@ -40,16 +40,18 @@
     "tslib": "2"
   },
   "devDependencies": {
-    "@types/bl": "^2.1.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.0.6",
+    "@types/bl": "^2.1.0",
     "@types/jest": "^26.0.14",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "mqtt-packet": "^6.6.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.1.2",
     "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0",
     "tslib": "^2.0.1",
     "tslint": "^6.1.3",
     "tslint-config-common": "^1.6.0",
