--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "typescript": "^4.0.3"
   },
   "release": {
+    "branches": ["main"],
     "verifyConditions": [
       "@semantic-release/changelog",
       "@semantic-release/npm",
